# polyedge-analyzer

./: .gitignore  LICENSE  README.md  install.ps1  pyproject.toml  run_local.ps1  uninstall.ps1
.github/workflows/: release.yml
app/: __init__.py  logging_config.py  main.py  settings.py  ui_mainwindow.py
core/: __init__.py  claude_client.py  ev.py  models.py  odds_providers.py  polymarket_clob.py  polymarket_gamma.py  pricing.py  schemas.py  staking.py
tests/: test_ev_kelly_fee.py
